--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -112,3 +112,9 @@ footer {
   border: 1px solid grey;
   padding-left: 8px;
 }
+.header4 {
+  font-size: x-large;
+}
+.icons {
+  font-size: x-large;
+}
